--- a/css/huile.css
+++ b/css/huile.css
@@ -115,22 +115,8 @@ input[type=submit2] {
   }
   
   
-  /* Apply dollar signs */
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
-  content: '$';
+  
+  
+.h4produit {
+	margin-top:20px;
 }
- .product-price {
-    clear: both;
-    width: 70px;
-  }
-  
-   .product-line-price {
-    float: right;
-    clear: left;
-    width: auto;
-    margin-top: 10px;
-  }
-  
-  .product .product-line-price:before {
-    content: 'Item Total: $';
-  }
