--- a/css/boutique.css
+++ b/css/boutique.css
@@ -1,19 +1,25 @@
+/********** GENERAL **********/
+
 body {
 	margin-top:150px;	
 }
+
 h1 {
 	text-transform:uppercase;
 	text-align:center;
 	margin-bottom:50px;
 }
+
 .h2boutique {
 	text-align:center;
 }
+
 .rechercheboutique {
 	text-align:center;
 	margin-top:-50px;
 	margin-bottom:100px;
 }
+
 input[type=textboutique] {
   width: 15%;
   padding: 6px;
@@ -30,9 +36,11 @@ input[type=textboutique] {
   font-size: 14px;
   margin-bottom:-5px;
 }
+
 .conditions {
 	margin-top:20px;
 }
+
 .section2 {
 	margin-bottom:-50px;
 	display:flex;
@@ -42,31 +50,32 @@ input[type=textboutique] {
 	margin-top:30px;
 }
 
-/*********************************
-4. Breadcrumbs
-*********************************/
+
+/********** BREADCRUMBS **********/
 
 .breadcrumbs2 {
 	width: 100%;
 	height: 60px;
 	border-bottom: solid 1px #EDEBDF;
-	margin-bottom:40px;
-	text-align:center;
+	margin-bottom: 40px;
+	text-align: center;
 }
+
 .breadcrumbs2 ul li {
 	display: inline-block;
 	margin-right: 100px;
 
 }
+
 input[type=menubtq] {
   width: 200px;
-  background:#EDEBDF; 
-  cursor:pointer;
+  background: #EDEBDF; 
+  cursor: pointer;
   padding: 6px;
   text-align: center;
   margin: 8px 0;
-  margin-left:10px;
-  margin-right:40px;
+  margin-left: 10px;
+  margin-right: 40px;
   color: black;
   box-sizing: border-box;
   border-width: 1px;
@@ -74,5 +83,4 @@ input[type=menubtq] {
   border-color: #9FB56D;
   border-radius: 60px;
   font-size: 16px;
-
 }
