--- a/css/huile.css
+++ b/css/huile.css
@@ -1,122 +1,128 @@
+/********** GENERAL **********/
+
 * {
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
+
 huileproduit {
-	margin-top:50px;
+	margin-top: 50px;
 }
+
 .gamme {
-	margin-top:40px;
+	margin-top: 40px;
 }
+
 .descri {
-	margin-left:200px;
-	margin-right:150px;
-	margin-top:10px;
-	margin-bottom:30px;
+	margin-left: 200px;
+	margin-right: 150px;
+	margin-top: 10px;
+	margin-bottom: 30px;
 }
+
 .photo img {
-	width:300px;
-	height:auto;
-	margin-left:100px;
+	width: 300px;
+	height: auto;
+	margin-left: 100px;
 }
+
 .row img {
-	width:300px;
-	height:auto;
+	width: 300px;
+	height: auto;
 }
+
 .small-img-group img{
-	width:60px;
-	height:auto;
+	width: 60px;
+	height: auto;
 }
+
 .small-img-group {
-	display:flex;
-	justify-content:space-between;
-	flex-basis:33%;
+	display: flex;
+	justify-content: space-between;
+	flex-basis: 33%;
 }
+
 .small-img-col {
-	cursor:pointer;
+	cursor: pointer;
 }
 
 
 .wrapper {
   display: grid;
-  margin-left:100px;
-  margin-right:100px;
+  margin-left: 100px;
+  margin-right: 100px;
   grid-template-columns: 500px 1fr;
 }
+
 .applogo img {
-	width:40px;
-	float:left;
-	padding:5px;
-}
-.section2 {
-	margin-bottom:-50px;
-	display:flex;
-	height: 340px;
-	justify-content:center;
-    vertical-align: middle;
-	margin-top:30px;
-	margin-left:200px;
-	margin-right:200px;
+	width: 40px;
+	float: left;
+	padding: 5px;
 }
 
-/*********************************
-4. Breadcrumbs
-*********************************/
+.section2 {
+	margin-bottom: -50px;
+	display: flex;
+	height: 340px;
+	justify-content: center;
+    vertical-align: middle;
+	margin-top: 30px;
+	margin-left: 200px;
+	margin-right: 200px;
+}
+
+
+/********** BREADCRUMBS **********/
 
 .breadcrumbs {
 	width: 100%;
 	height: 60px;
 	border-bottom: solid 1px #EDEBDF;
-	margin-bottom:40px;
-	margin-top:150px;
-	text-align:center;
+	margin-bottom: 40px;
+	margin-top: 150px;
+	text-align: center;
 }
+
 .breadcrumbs ul li {
 	display: inline-block;
 	margin-right: 10px;
 
 }
+
 .breadcrumbs ul li.active a {
 	color: #cecece;
 }
+
 .breadcrumbs ul li i {
 	margin-right: 15px;
 }
+
 .breadcrumbs ul li a {
 	color: #4c4c4c;
 }
 
-/*********************************
-Ajouter au panier
-*********************************/
-input[type=submit2] {
-    width:30%;
-    font-size: 15px;
-	text-align:center;
-    color: white;
-    padding:7px;
-    padding-left: 5px;
-    background:#9FB56D; 
-    border:0 none;
-    cursor:pointer;
-    -webkit-border-radius: 60px; 
-	font-family:Poppins, sans-serif;
+.product-quantity input {
+	width: 80px;
+}
+
+.h4produit {
+	margin-top: 20px;
 }
 
 
+/********** AJOUTER AU PANIER **********/
 
- .product-quantity {
-	width: 100px;
-    input {
-      width: 80px;
-      margin-left: 20px;
-    }
-  }
-  
-  
-  
-  
-.h4produit {
-	margin-top:20px;
+input[type=submit2] {
+    width: 30%;
+    font-size: 15px;
+	text-align: center;
+    color: white;
+    padding: 7px;
+    padding-left: 5px;
+    background: #9FB56D; 
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 60px; 
+	font-family: Poppins, sans-serif;
 }
