--- a/css/panier.css
+++ b/css/panier.css
@@ -1,10 +1,4 @@
-/*
-I wanted to go with a mobile first approach, but it actually lead to more verbose CSS in this case, so I've gone web first. Can't always force things...
-
-Side note: I know that this style of nesting in SASS doesn't result in the most performance efficient CSS code... but on the OCD/organizational side, I like it. So for CodePen purposes, CSS selector performance be damned.
-*/
-/* Global settings */
-/* Global "table" column settings */
+/********** GENERAL **********/
 
 body {
 	padding: 0;
@@ -12,6 +6,18 @@ body {
 	box-sizing : border-box;
 	margin-top:150px;
 	font-family:Poppins, sans-serif;	
+}
+
+.h1panier {
+  font-weight: bold;
+  text-align:center;
+  margin-bottom:100px;
+  position:relative;
+}
+
+.shopping-cart {
+  padding-left:50px;
+  padding-right:100px;
 }
 
 .product-image {
@@ -45,7 +51,9 @@ body {
   text-align: right;
 }
 
-/* This is used as the traditional .clearfix class */
+
+/********** CLEAR FIX **********/
+
 .group:before, .shopping-cart:before, .column-labels:before, .productpanier:before, .totals-item:before,
 .group:after,
 .shopping-cart:after,
@@ -64,65 +72,57 @@ body {
   zoom: 1;
 }
 
-/* Apply clearfix in a few places */
-/* Apply dollar signs */
+
+/********** SIGNE € **********/
+
 .productpanier .product-price:before, .productpanier .product-line-price:before, .totals-value:before {
   content: '€';
 }
 
-/* Body/Header stuff */
-body {
-  
- 
-  
-}
 
-.h1panier {
-  font-weight: bold;
-  text-align:center;
-  margin-bottom:100px;
-  position:relative;
-}
+/********** COLONNES **********/
 
-
-.shopping-cart {
-  padding-left:50px;
-  padding-right:100px;
-}
-
-/* Column headers */
 .column-labels label {
   padding-bottom: 15px;
   margin-bottom: 15px;
   border-bottom: 1px solid #eee;
 }
+
 .column-labels .product-image, .column-labels .product-details, .column-labels .product-removal {
   text-indent: -9999px;
 }
 
-/* Product entries */
+
+/********** PRODUITS DU PANIER **********/
+
 .productpanier {
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
 }
+
 .productpanier .product-image {
   text-align: center;
 }
+
 .productpanier .product-image img {
   width: 100px;
 }
+
 .productpanier .product-details .product-title {
   margin-right: 20px;
   font-weight:bold;
 }
+
 .productpanier .product-details .product-description {
   margin: 5px 20px 5px 0;
   font-size:14px;
 }
+
 .productpanier .product-quantity input {
   width: 40px;
 }
+
 .productpanier .remove-product {
   border: 0;
   padding: 4px 8px;
@@ -131,11 +131,13 @@ body {
   font-size: 12px;
   border-radius: 3px;
 }
+
 .productpanier .remove-product:hover {
   background-color: #a44;
 }
 
-/* CALCUL DES TOTAUX */
+
+/********** CALCUL DES TOTAUX **********/
 
 .totals .totals-item {
   float: right;
@@ -171,78 +173,86 @@ body {
   color: white;
 }
 
-/* Make adjustments for tablet */
+
+/********** RESPONSIVE TABLETTE **********/
+
 @media screen and (max-width: 650px) {
-  .shopping-cart {
+.shopping-cart {
     margin: 0;
     padding-top: 20px;
     border-top: 1px solid #eee;
-  }
+}
 
-  .column-labels {
+.column-labels {
     display: none;
-  }
+}
 
-  .product-image {
+.product-image {
     float: right;
     width: auto;
-  }
-  .product-image img {
-    margin: 0 0 10px 10px;
-  }
+}
 
-  .product-details {
+.product-image img {
+    margin: 0 0 10px 10px;
+}
+
+.product-details {
     float: none;
     margin-bottom: 10px;
     width: auto;
-  }
+}
 
-  .product-price {
+.product-price {
     clear: both;
     width: 70px;
-  }
+}
 
-  .product-quantity {
+.product-quantity {
     width: 100px;
-  }
-  .product-quantity input {
+}
+  
+.product-quantity input {
     margin-left: 20px;
-  }
+}
 
-  .product-quantity:before {
+.product-quantity:before {
     content: 'x';
-  }
+}
 
-  .product-removal {
+.product-removal {
     width: auto;
-  }
+}
 
-  .product-line-price {
+.product-line-price {
     float: right;
     width: 70px;
-  }
 }
-/* Make more adjustments for phone */
+}
+
+
+/********** RESPONSIVE TELEPHONE **********/
+
 @media screen and (max-width: 350px) {
-  .product-removal {
+.product-removal {
     float: right;
   }
 
-  .product-line-price {
+.product-line-price {
     float: right;
     clear: left;
     width: auto;
     margin-top: 10px;
   }
 
-  .productpanier .product-line-price:before {
+.productpanier .product-line-price:before {
     content: 'Item Total: €';
   }
 
-  .totals .totals-item label {
+.totals .totals-item label {
     width: 60%;
   }
-  .totals .totals-item .totals-value {
+ 
+.totals .totals-item .totals-value {
     width: 40%;
   }
 }
