--- a/css/politique.css
+++ b/css/politique.css
@@ -1,36 +1,42 @@
+/********** GENERAL **********/
+
 body {
     font-family: 'Poppins', sans-serif;
-	margin-top:150px;
+	margin-top: 150px;
 }
+
 .h1article {
-	margin-bottom:30px;
+	margin-bottom: 30px;
 	color: #64C38D;
-	text-align:center;
+	text-align: center;
 }
 
 .h2article {
-	margin-bottom:10px;
+	margin-bottom: 10px;
 	margin-top: 4%;
 	color: black;
 	margin-left: 15%;
-	font-size:18px;
-	text-align:left;
+	font-size: 18px;
+	text-align: left;
 }
+
 .description {
 	margin-left: 15%;
 	margin-right: 15%;
-	margin-top:10px;
-	margin-bottom:10px;
-	text-align:justify;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	text-align: justify;
 }
+
 .lidescription {
 	margin-left: 15%;
 	margin-right: 15%;
-	margin-top:10px;
-	margin-bottom:10px;
-	list-style:none;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	list-style: none;
 	
 }
+
 .pol {
-	margin-bottom:50px;
+	margin-bottom: 50px;
 }
