--- a/css/promotions.css
+++ b/css/promotions.css
@@ -1,57 +1,75 @@
-section img {
-	width:600px;
-	height:auto;
-}
-.row-promo {
-	margin-bottom:100px;
-}
-.floatleft {
-	float:left;
-}
-.floatright {
-	float:right;
-}
+/********** GENERAL **********/
+
 body {
-	margin-top:150px;	
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	margin-top: 150px;
 }
+
 h1 {
-	text-transform:uppercase;
-	text-align:center;
-	margin-bottom:50px;
+	text-transform: uppercase;
+	text-align: center;
+	margin-bottom: 50px;
 }
+
+
+/********** PAGE **********/
+
+section img {
+	width: 600px;
+	height: auto;
+}
+
+.row-promo {
+	margin-bottom: 100px;
+}
+
+.floatleft {
+	float: left;
+}
+
+.floatright {
+	float: right;
+}
+
 section {
-	display:flex;
-	margin-bottom:50px;
-	justify-content:center;
+	display: flex;
+	margin-bottom: 50px;
+	justify-content: center;
     vertical-align: middle;
 }
+
 section h3 {
 	margin-top: 100px;
 	
 }
+
 section p {
 	text-align: center;
 }
 
 .promodiv {
-	width:600px;
-	height:auto;
-	margin:3px;
+	width: 600px;
+	height: auto;
+	margin: 3px;
 }
 
+
+/********** BOUTON JOUER **********/
+
 input[type=submitjouer] {
-    width:30%;
+    width: 30%;
     font-size: 15px;
-	text-align:center;
+	text-align: center;
     color: white;
-    padding:7px;
+    padding: 7px;
     padding-left: 5px;
-    background:#9FB56D; 
-    border:0 none;
-    cursor:pointer;
+    background: #9FB56D; 
+    border: 0 none;
+    cursor: pointer;
     -webkit-border-radius: 60px; 
-	font-family:Poppins, sans-serif;
-	margin-left:200px;
-	margin-top:20px;
-	
+	font-family: Poppins, sans-serif;
+	margin-left: 200px;
+	margin-top: 20px;
 }
