--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-
-/********** RESPONSIVE **********/
-
-@media (max-width:768px) {
-	html {
-		font-size:14px;
-	}
-}
-
 /********** GENERAL **********/
 
 * {
@@ -47,9 +38,6 @@ a {
 
 /********** MENU DE NAVIGATION **********/
 
-label {
-    display: none;
-}
 .container {
 	max-width:1300px;
 	margin:auto;
@@ -72,7 +60,7 @@ label {
 	background: #fff;
 	box-shadow: 0 0 16px rgba(0, 0, 0, 0.15);
 	z-index: 10;
-	border-radius:3xp; 
+	border-radius:3px; 
 }
 
 .menu-bar ul li {
@@ -446,10 +434,9 @@ ul {
 	height:2px;
 	margin:20px 0;
 }
-.4raisons h2{
+.raisons h2{
 	text-align:center;
 }
-
 
 .meillsection {
 	display:flex;
@@ -613,4 +600,12 @@ ul {
 	height:auto;
 	float: right;
 	margin-top:-10px;
+}
+
+/********** RESPONSIVE **********/
+
+@media (max-width:768px) {
+	html {
+		font-size:14px;
+	}
 }
