--- a/css/information.css
+++ b/css/information.css
@@ -18,7 +18,39 @@ body {
 
 
 /********** BOUTON JE VEUX MON PANIER **********/
-	 
+
+input[id="continuez"] {
+    width: 60%;
+    font-size: 15px;
+	text-align: center;
+    color: white;
+    padding: 10px 20px;
+    background: #9FB56D; 
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 60px; 
+	font-family: Poppins, sans-serif;
+	font-size: 16px;
+	margin-top: 40px; 
+    margin-bottom: 30px; 
+}
+
+input[id="connecter"] {
+    width: 50%;
+    font-size: 15px;
+	text-align: center;
+    color: white;
+    padding: 10px 20px;
+    background: #9FB56D; 
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 60px; 
+	font-family: Poppins, sans-serif;
+	font-size: 16px;
+	margin-top: 40px; 
+    margin-bottom: 30px; 
+}
+
 .btn {
      border: 2px solid black;
      background-color: #9FB56D;
@@ -27,9 +59,6 @@ body {
      font-size: 16px;
      cursor: pointer;
 }
-
-
-/********** BOUTONS **********/
 	 
 .dropbtn {
 	margin-left: 60px; 
