--- a/css/nospaniers.css
+++ b/css/nospaniers.css
@@ -9,38 +9,44 @@ body {
 
 
 /********** BOUTON JE VEUX MON PANIER **********/
-	 
-.btn {
-     border: 2px solid black;
-     background-color: #9FB56D;
-     color: #9FB56D;
-     padding: 14px 28px;
-     font-size: 16px;
-     cursor: pointer;
+
+input[id="veuxpanier"] {
+    width: 30%;
+    font-size: 15px;
+	text-align: center;
+    color: black;
+    padding: 10px 20px;
+    background: #9FB56D; 
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 60px; 
+	font-family: Poppins, sans-serif;
+	font-size: 16px;
+	margin-top: 40px; 
+    margin-bottom: 30px; 
+}
+input[id="veuxpanier"]:hover {
+  color: white;
 }
 
-.dropbtn {
-	margin-left: 60px; 
+input[id="veuxpanier2"] {
+    width: 30%;
+    font-size: 15px;
+	text-align: center;
+    color: black;
+    padding: 10px 20px;
+    background: #CFDAB6; 
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 60px; 
+	font-family: Poppins, sans-serif;
+	font-size: 16px;
+	margin-top: 40px; 
+    margin-bottom: 30px; 
 }
-
-.success {
-     background-color: #9FB56D;
-     color: black;
-     padding: 10px; 
-     padding-right: 10px; 
-     padding-left: 10px; 
-     border-radius: 40px; 
-     border: none; 
-     font-size: 20px; 
-     margin-top: 40px; 
-     margin-bottom: 30px; 
+input[id="veuxpanier2"]:hover {
+  color: white;
 }
-
-.success:hover {
-     background-color: #9FB56D;
-     color: white;
-}
-
 
 /********** OFFRE **********/
 	 
