--- a/css/promotions.css
+++ b/css/promotions.css
@@ -58,11 +58,11 @@ section p {
 
 /********** BOUTON JOUER **********/
 
-input[type=submitjouer] {
+input[id="jouer"] {
     width: 30%;
     font-size: 15px;
 	text-align: center;
-    color: white;
+    color: black;
     padding: 7px;
     padding-left: 5px;
     background: #9FB56D; 
@@ -72,4 +72,7 @@ input[type=submitjouer] {
 	font-family: Poppins, sans-serif;
 	margin-left: 200px;
 	margin-top: 20px;
+}
+input[id="jouer"]:hover {
+  color: white;
 }
