--- a/css/information.css
+++ b/css/information.css
@@ -23,7 +23,7 @@ input[id="continuez"] {
     width: 60%;
     font-size: 15px;
 	text-align: center;
-    color: white;
+    color: black;
     padding: 10px 20px;
     background: #9FB56D; 
     border: 0 none;
@@ -34,12 +34,15 @@ input[id="continuez"] {
 	margin-top: 40px; 
     margin-bottom: 30px; 
 }
+input[id="continuez"]:hover {
+  color: white;
+}
 
 input[id="connecter"] {
     width: 50%;
     font-size: 15px;
 	text-align: center;
-    color: white;
+    color: black;
     padding: 10px 20px;
     background: #9FB56D; 
     border: 0 none;
@@ -49,6 +52,9 @@ input[id="connecter"] {
 	font-size: 16px;
 	margin-top: 40px; 
     margin-bottom: 30px; 
+}
+input[id="connecter"]:hover {
+  color: white;
 }
 
 .btn {
@@ -129,7 +135,7 @@ input[id="connecter"] {
      padding: 10px;  
      border-radius: 40px; 
      border: none; 
-     font-size: 18px; 
+     font-size: 15px; 
      margin-top: 40px; 
      margin-bottom: 30px; 	
 	 text-align: center; 
